tests/jsr335/Semantics/InterfaceMethods/InterfaceMethodBody/ShouldFail/syntax03/Test.java
public class Test {
	public interface A {
		static void m();
	}
}